--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "edu-intervals",
   "version": "0.1.0",
   "private": true,
-  "homepage": "edu",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -13,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "midi-sounds-react": "^1.2.54",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.1",
     "tone": "^14.7.77",
     "web-midi-player": "^1.4.1",
     "web-vitals": "^2.1.4"
